; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/isci/extr_host.c_sci_controller_completion_queue_has_entries.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/isci/extr_host.c_sci_controller_completion_queue_has_entries.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.isci_host = type { i64, i32* }

@SMU_COMPLETION_QUEUE_GET_POINTER_MASK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.isci_host*)* @sci_controller_completion_queue_has_entries to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sci_controller_completion_queue_has_entries(%struct.isci_host* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.isci_host*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store %struct.isci_host* %0, %struct.isci_host** %3, align 8
  %6 = load %struct.isci_host*, %struct.isci_host** %3, align 8
  %7 = getelementptr inbounds %struct.isci_host, %struct.isci_host* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  store i64 %8, i64* %4, align 8
  %9 = load i64, i64* %4, align 8
  %10 = load i64, i64* @SMU_COMPLETION_QUEUE_GET_POINTER_MASK, align 8
  %11 = and i64 %9, %10
  store i64 %11, i64* %5, align 8
  %12 = load i64, i64* %4, align 8
  %13 = call i64 @NORMALIZE_GET_POINTER_CYCLE_BIT(i64 %12)
  %14 = load %struct.isci_host*, %struct.isci_host** %3, align 8
  %15 = getelementptr inbounds %struct.isci_host, %struct.isci_host* %14, i32 0, i32 1
  %16 = load i32*, i32** %15, align 8
  %17 = load i64, i64* %5, align 8
  %18 = getelementptr inbounds i32, i32* %16, i64 %17
  %19 = load i32, i32* %18, align 4
  %20 = call i64 @COMPLETION_QUEUE_CYCLE_BIT(i32 %19)
  %21 = icmp eq i64 %13, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %24

23:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %24

24:                                               ; preds = %23, %22
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local i64 @NORMALIZE_GET_POINTER_CYCLE_BIT(i64) #1

declare dso_local i64 @COMPLETION_QUEUE_CYCLE_BIT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
